--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./sources/css/reset.css"> -->
+    <link rel="stylesheet" href="./sources/css/reset.css">
     <!-- <link rel="stylesheet" href="./sources/fonts/"> -->
-    <!-- <link rel="stylesheet" href="./sources/css/style.css"> -->
+    <link rel="stylesheet" href="./sources/css/style.css">
     <title>Document</title>
 </head>
     <body>
-        <!-- <script src="./sources/javascript/script.js"></script> -->
+        <div class="container-image">
+            <img class=home-image src="./sources/images/home.png" alt="strairs">
+        </div>
+        <script src="./sources/javascript/script.js"></script>
     </body>
 </html>
