--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 </head>
     <body>
         <div class="container-image">
-            <img class=home-image src="./sources/images/home.png" alt="strairs">
+            <img class=home-image src="./sources/images/home.png" alt="strairs" width="1800" height="800">
         </div>
+        <nav class="nav">
+            <ul class="links">
+                <li class="link"> <a href="#">home</a></li>
+                <li class="link"> <a href="#">about</a></li>
+                <li class="link"> <a href="#">projects</a></li>
+                <li class="link"> <a href="#">social</a></li>
+            </ul>
+        </nav>
         <script src="./sources/javascript/script.js"></script>
     </body>
 </html>
