home > social > add

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <title>Document</title>
 </head>
     <body>
-        <div class="container-image">
-            <img class=home-image src="./sources/images/home.png" alt="strairs" width="1800" height="800">
-        </div>
         <nav class="nav">
             <ul class="links">
                 <li class="link"> <a href="#">home</a></li>
@@ -20,6 +17,14 @@
                 <li class="link"> <a href="#">social</a></li>
             </ul>
         </nav>
+        <div class="container-image">
+            <img class=home-image src="./sources/images/home.png" alt="strairs" width="1800" height="800">
+        </div>
+        <div class="container-social">
+            <img class="social" src="./sources/svg/facebook.svg" alt="facebook">
+            <img class="social" src="./sources/svg/insta.svg" alt="insta">
+            <img class="social" src="./sources/svg/twitter.svg" alt="twitter">
+        </div>
         <script src="./sources/javascript/script.js"></script>
     </body>
 </html>
