home > cards-name > add

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./sources/css/reset.css">
     <!-- <link rel="stylesheet" href="./sources/fonts/"> -->
-    <link rel="stylesheet" href="./sources/css/style.css">
+    <link rel="stylesheet" href="./sources/css/stylehome.css">
     <title>Document</title>
 </head>
     <body>
@@ -19,6 +19,11 @@
         </nav>
         <div class="container-image">
             <img class=home-image src="./sources/images/home.png" alt="strairs" width="1800" height="800">
+        </div>
+        <div class="card-id">
+            <h1 class="name">Yoann Claisse</h1>
+            <h2 class="title">Digital student / Portfolio</h2>
+            <button class="button-home"><a href="project.html">discover</a></button>
         </div>
         <div class="container-social">
             <img class="social" src="./sources/svg/facebook.svg" alt="facebook">
