--- a/project.html
+++ b/project.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./sources/css/reset.css"> -->
+    <link rel="stylesheet" href="./sources/css/reset.css">
     <!-- <link rel="stylesheet" href="./sources/fonts/"> -->
-    <!-- <link rel="stylesheet" href="./sources/css/style.css"> -->
+    <link rel="stylesheet" href="./sources/css/styleproject.css">
     <title>Document</title>
 </head>
     <body>
