--- a/project.html
+++ b/project.html
@@ -9,6 +9,18 @@
     <title>Document</title>
 </head>
     <body>
+        <div class="container">
+            <div class="letter">
+                <span>Y</span>
+                <span>.</span>
+                <span>C</span>
+            </div>
+        </div>
+        <h1>my project</h1>
+        <div class="square-1"></div>
+        <div class="square-2"></div>
+        <div class="square-3"></div>
+        <div class="square-4"></div>
         <!-- <script src="./sources/javascript/script.js"></script> -->
     </body>
 </html>
