--- a/project.html
+++ b/project.html
@@ -10,10 +10,10 @@
 </head>
     <body>
         <div class="container">
-            <div class="letter">
-                <span>Y</span>
-                <span>.</span>
-                <span>C</span>
+            <div class="letters">
+                <span class="letter">Y</span>
+                <span class="letter">.</span>
+                <span class="letter">C</span>
             </div>
         </div>
         <h1>my project</h1>
