--- a/project.html
+++ b/project.html
@@ -15,12 +15,12 @@
                 <span class="letter">.</span>
                 <span class="letter">C</span>
             </div>
+            <h1 class="title">my project</h1>
+            <div class="square-1"></div>
+            <div class="square-2"></div>
+            <div class="square-3"></div>
+            <div class="square-4"></div>
         </div>
-        <h1>my project</h1>
-        <div class="square-1"></div>
-        <div class="square-2"></div>
-        <div class="square-3"></div>
-        <div class="square-4"></div>
         <!-- <script src="./sources/javascript/script.js"></script> -->
     </body>
 </html>
