--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <button class="button-home"><a href="project.html">discover</a></button>
         </div>
         <div class="container-social">
-            <img class="social" src="./sources/svg/facebook.svg" alt="facebook">
-            <img class="social" src="./sources/svg/insta.svg" alt="insta">
-            <img class="social" src="./sources/svg/twitter.svg" alt="twitter">
+            <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
+            <a href=""><img class="social" src="./sources/svg/insta.svg" alt="insta"></a>
+            <a href=""><img class="social" src="./sources/svg/twitter.svg" alt="twitter"></a>
         </div>
         <script src="./sources/javascript/script.js"></script>
     </body>
 </html>
+
