--- a/project.html
+++ b/project.html
@@ -8,19 +8,27 @@
     <link rel="stylesheet" href="./sources/css/styleproject.css">
     <title>Document</title>
 </head>
-    <body>
-        <div class="container">
-            <div class="letters">
-                <span class="letter">Y</span>
-                <span class="letter">.</span>
-                <span class="letter">C</span>
-            </div>
-            <h1 class="title">my project</h1>
-            <div class="square-1"></div>
-            <div class="square-2"></div>
-            <div class="square-3"></div>
-            <div class="square-4"></div>
+<body>
+    <div class="container">
+        <div class="letters">
+            <span class="letter">Y</span>
+            <span class="letter">.</span>
+            <span class="letter">C</span>
         </div>
-        <!-- <script src="./sources/javascript/script.js"></script> -->
-    </body>
+        <h1 class="title">my projects</h1>
+        <div class="square-1"></div>
+        <div class="square-2"></div>
+        <div class="square-3"></div>
+        <div class="square-4"></div>
+        <div class="burger-menu">
+            <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
+        </div>
+    </div>
+    <div class="container-social">
+        <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
+        <a href=""><img class="social" src="./sources/svg/insta.svg" alt="insta"></a>
+        <a href=""><img class="social" src="./sources/svg/twitter.svg" alt="twitter"></a>
+    </div>
+    <!-- <script src="./sources/javascript/script.js"></script> -->
+</body>
 </html>
