--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./sources/css/reset.css">
+    <link rel="stylesheet" href="./sources/css/keyframes.css">
     <!-- <link rel="stylesheet" href="./sources/fonts/"> -->
     <link rel="stylesheet" href="./sources/css/stylehome.css">
     <title>Document</title>
@@ -13,7 +14,7 @@
             <ul class="links">
                 <li class="link"> <a href="#">home</a></li>
                 <li class="link"> <a href="#">about</a></li>
-                <li class="link"> <a href="#">projects</a></li>
+                <li class="link"> <a href="project.html" target="blank">projects</a>
                 <li class="link"> <a href="#">social</a></li>
             </ul>
         </nav>
@@ -23,7 +24,7 @@
         <div class="card-id">
             <h1 class="name">Yoann Claisse</h1>
             <h2 class="title">Digital student / Portfolio</h2>
-            <button class="button-home"><a href="project.html">discover</a></button>
+            <button class="button-home"><a href="project.html" target="blank">discover</a></button>
         </div>
         <div class="container-social">
             <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
