--- a/project.html
+++ b/project.html
@@ -16,12 +16,20 @@
             <span class="letter">C</span>
         </div>
         <h1 class="title">my projects</h1>
-        <div class="square-1"></div>
-        <div class="square-2"></div>
-        <div class="square-3"></div>
-        <div class="square-4"></div>
+        <div class="position-inside square-1"><a class="link-project" href="#">developpement</a></div>
+        <div class="position-inside square-2"><a class="link-project" href="#">photos</a></div>
+        <div class="position-inside square-3"><a class="link-project" href="#">designs</a></div>
+        <div class="position-inside square-4"><a class="link-project" href="#">draws</a></div>
         <div class="burger-menu">
-            <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
+            <a href=""><img class="social" src="./sources/svg/burger.svg" alt="facebook"></a>
+            <div class="burger-container">
+                <ul class="links">
+                    <li class="link"> <a href="#">home</a></li>
+                    <li class="link"> <a href="#">about</a></li>
+                    <li class="link"> <a href="#">projects</a></li>
+                    <li class="link"> <a href="#">social</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="container-social">
