project > add animation and lazyload

--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./sources/css/reset.css">
+    <link rel="stylesheet" href="./sources/css/keyframes.css">
     <!-- <link rel="stylesheet" href="./sources/fonts/"> -->
     <link rel="stylesheet" href="./sources/css/styleproject.css">
     <title>Document</title>
@@ -16,12 +17,12 @@
             <span class="letter">C</span>
         </div>
         <h1 class="title">my projects</h1>
-        <div class="position-inside square-1"><a class="link-project" href="#">developpement</a></div>
-        <div class="position-inside square-2"><a class="link-project" href="#">photos</a></div>
-        <div class="position-inside square-3"><a class="link-project" href="#">designs</a></div>
-        <div class="position-inside square-4"><a class="link-project" href="#">draws</a></div>
+        <div class="chapter square-1"><a class="link-project" href="#">developpement</a></div>
+        <div class="chapter square-2"><a class="link-project" href="#">photos</a></div>
+        <div class="chapter square-3"><a class="link-project" href="#">designs</a></div>
+        <div class="chapter square-4"><a class="link-project" href="#">draws</a></div>
         <div class="burger-menu">
-            <a href=""><img class="social" src="./sources/svg/burger.svg" alt="facebook"></a>
+            <a href="#"><img class="social" src="./sources/svg/burger.svg" alt="burger-menu"></a>
             <div class="burger-container">
                 <ul class="links">
                     <li class="link"> <a href="#">home</a></li>
@@ -37,6 +38,6 @@
         <a href=""><img class="social" src="./sources/svg/insta.svg" alt="insta"></a>
         <a href=""><img class="social" src="./sources/svg/twitter.svg" alt="twitter"></a>
     </div>
-    <!-- <script src="./sources/javascript/script.js"></script> -->
+    <script src="./sources/javascript/scriptproject.js"></script>
 </body>
 </html>
