--- a/project.html
+++ b/project.html
@@ -22,15 +22,15 @@
         <div class="chapter square-3"><a class="link-project" href="#">designs</a></div>
         <div class="chapter square-4"><a class="link-project" href="#">draws</a></div>
         <div class="burger-menu">
-            <a href="#"><img class="social" src="./sources/svg/burger.svg" alt="burger-menu"></a>
-            <div class="burger-container">
-                <ul class="links">
-                    <li class="link"> <a href="#">home</a></li>
-                    <li class="link"> <a href="#">about</a></li>
-                    <li class="link"> <a href="#">projects</a></li>
-                    <li class="link"> <a href="#">social</a></li>
-                </ul>
-            </div>
+            <a href="#"><img class="icon" src="./sources/svg/burger.svg" alt="burger-menu"></a>
+        </div>
+        <div class="burger-container">
+            <ul class="links">
+                <li class="link"> <a href="index.html" target="blank">home</a></li>
+                <li class="link"> <a href="#">about</a></li>
+                <li class="link"> <a href="project.html">projects</a></li>
+                <li class="link"> <a href="#">social</a></li>
+            </ul>
         </div>
     </div>
     <div class="container-social">
