project article > add new section

--- a/project.html
+++ b/project.html
@@ -38,6 +38,11 @@
         <a href=""><img class="social" src="./sources/svg/insta.svg" alt="insta"></a>
         <a href=""><img class="social" src="./sources/svg/twitter.svg" alt="twitter"></a>
     </div>
+    <div class="container-projects">
+        <img src="" alt="">
+        <h3>project name</h3>
+        <button class="button-back"><a href="#">back</a></button>
+    </div>
     <script src="./sources/javascript/scriptproject.js"></script>
 </body>
 </html>
