home and project > responsive

--- a/project.html
+++ b/project.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./sources/css/keyframes.css">
     <!-- <link rel="stylesheet" href="./sources/fonts/"> -->
     <link rel="stylesheet" href="./sources/css/styleproject.css">
+    <link rel="stylesheet" href="./sources/css/responsiveproject.css">
+
     <title>Document</title>
 </head>
 <body>
@@ -32,17 +34,20 @@
                 <li class="link"> <a href="#">social</a></li>
             </ul>
         </div>
+
+        
     </div>
     <div class="container-social">
         <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
         <a href=""><img class="social" src="./sources/svg/insta.svg" alt="insta"></a>
         <a href=""><img class="social" src="./sources/svg/twitter.svg" alt="twitter"></a>
     </div>
-    <div class="container-projects">
+    
+    <!-- <div class="container-projects">
         <img src="" alt="">
         <h3>project name</h3>
         <button class="button-back"><a href="#">back</a></button>
-    </div>
+    </div> -->
     <script src="./sources/javascript/scriptproject.js"></script>
 </body>
 </html>
