--- a/index.html
+++ b/index.html
@@ -7,30 +7,32 @@
     <link rel="stylesheet" href="./sources/css/keyframes.css">
     <!-- <link rel="stylesheet" href="./sources/fonts/"> -->
     <link rel="stylesheet" href="./sources/css/stylehome.css">
+    <link rel="stylesheet" href="./sources/css/responsivehome.css">
     <title>Document</title>
 </head>
     <body>
-        <nav class="nav">
-            <ul class="links">
-                <li class="link"> <a href="#">home</a></li>
-                <li class="link"> <a href="#">about</a></li>
-                <li class="link"> <a href="project.html" target="blank">projects</a>
-                <li class="link"> <a href="#">social</a></li>
-            </ul>
-        </nav>
         <div class="container-image">
-            <img class=home-image src="./sources/images/home.png" alt="strairs" width="1800" height="800">
+            <nav class="nav">
+                <ul class="links">
+                    <li class="link"> <a href="#">home</a></li>
+                    <li class="link"> <a href="#">about</a></li>
+                    <li class="link"> <a href="project.html" target="blank">projects</a>
+                    <li class="link"> <a href="#">social</a></li>
+                </ul>
+            </nav>
+            <img class=home-image src="./sources/images/home.png" alt="strairs">
+            <div class="card-id">
+                <h1 class="name">Yoann Claisse</h1>
+                <h2 class="title">Digital student / Portfolio</h2>
+                <button class="button-home"><a href="project.html" target="blank">discover</a></button>
+            </div>
+            <div class="container-social">
+                <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
+                <a href=""><img class="social" src="./sources/svg/insta.svg" alt="insta"></a>
+                <a href=""><img class="social" src="./sources/svg/twitter.svg" alt="twitter"></a>
+            </div>
         </div>
-        <div class="card-id">
-            <h1 class="name">Yoann Claisse</h1>
-            <h2 class="title">Digital student / Portfolio</h2>
-            <button class="button-home"><a href="project.html" target="blank">discover</a></button>
-        </div>
-        <div class="container-social">
-            <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
-            <a href=""><img class="social" src="./sources/svg/insta.svg" alt="insta"></a>
-            <a href=""><img class="social" src="./sources/svg/twitter.svg" alt="twitter"></a>
-        </div>
+        
         <script src="./sources/javascript/scripthome.js"></script>
     </body>
 </html>
