final version with comment

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <!-- <link rel="stylesheet" href="./sources/fonts/"> -->
     <link rel="stylesheet" href="./sources/css/stylehome.css">
     <link rel="stylesheet" href="./sources/css/responsivehome.css">
-    <title>Document</title>
+    <title>Projects</title>
 </head>
     <body>
+        <!-- CONTAINER -->
         <div class="container-image">
+
+            <!-- NAVIGATION -->
             <nav class="nav">
                 <ul class="links">
                     <li class="link"> <a href="#">home</a></li>
@@ -20,12 +23,18 @@
                     <li class="link"> <a href="#">social</a></li>
                 </ul>
             </nav>
+
+            <!-- HERO -->
             <img class=home-image src="./sources/images/home.png" alt="strairs">
+
+            <!-- ID CARD -->
             <div class="card-id">
                 <h1 class="name">Yoann Claisse</h1>
                 <h2 class="title">Digital student / Portfolio</h2>
                 <button class="button-home"><a href="project.html" target="blank">discover</a></button>
             </div>
+
+            <!-- SOCIAL -->
             <div class="container-social">
                 <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
                 <a href=""><img class="social" src="./sources/svg/insta.svg" alt="insta"></a>
