--- a/project.html
+++ b/project.html
@@ -9,15 +9,21 @@
     <link rel="stylesheet" href="./sources/css/styleproject.css">
     <link rel="stylesheet" href="./sources/css/responsiveproject.css">
 
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
+
+    <!-- CONTAINER -->
     <div class="container">
+
+        <!-- LETTERS -->
         <div class="letters">
             <span class="letter">Y</span>
             <span class="letter">.</span>
             <span class="letter">C</span>
         </div>
+
+        <!-- CHAPTER -->
         <h1 class="title">my projects</h1>
         <div class="chapter square-1"><a class="link-project" href="#">developpement</a></div>
         <div class="chapter square-2"><a class="link-project" href="#">photos</a></div>
@@ -26,6 +32,8 @@
         <div class="burger-menu">
             <a href="#"><img class="icon" src="./sources/svg/burger.svg" alt="burger-menu"></a>
         </div>
+
+        <!-- BURGER MENU -->
         <div class="burger-container">
             <ul class="links">
                 <li class="link"> <a href="index.html" target="blank">home</a></li>
@@ -35,19 +43,15 @@
             </ul>
         </div>
 
-        
+        <!-- SOCIAL MEDIA -->
     </div>
     <div class="container-social">
         <a href=""><img class="social" src="./sources/svg/facebook.svg" alt="facebook"></a>
         <a href=""><img class="social" src="./sources/svg/insta.svg" alt="insta"></a>
         <a href=""><img class="social" src="./sources/svg/twitter.svg" alt="twitter"></a>
     </div>
-    
-    <!-- <div class="container-projects">
-        <img src="" alt="">
-        <h3>project name</h3>
-        <button class="button-back"><a href="#">back</a></button>
-    </div> -->
+
+    <!-- SCRIPT JS -->
     <script src="./sources/javascript/scriptproject.js"></script>
 </body>
 </html>
